@@ -45,6 +45,7 @@
           <div class="text i18n">menu.autoReplaceOnLoad</div>
         </div>
         <div id="options" class="panel-list-item i18n">menu.options</div>
+        <div id="help" class="panel-list-item i18n">menu.help</div>
       </div>
     </div>
 
